# google-calendar-remind-scheduler-example

./: .envrc  .gitignore  Makefile  README.md  function.jsonnet  pyproject.toml
lambda/: main.py
terraform/: .envrc  .gitignore  .terraform.lock.hcl  Makefile  README.md  eventbridge.tf  iam_role.tf  locals.tf  main.tf  outputs.tf  provider.tf  sops.tf  ssm_params.tf  variables.tf
terraform/modules/kms/: kms.tf  outputs.tf
